Move some scripts around MiscScripts changes * Move most items out of MiscScripts and into their own script files. * Cleanup MiscScripts file quite a bit.
MiscDebugMenu changes
* Add skydive cheat test from singleplayer cheats.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -269,6 +269,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="Scripts\Misc\IdGun.cpp" />
+    <ClCompile Include="Scripts\Misc\MiscExtraFeatures.cpp" />
+    <ClCompile Include="Scripts\Misc\MiscMusicScripts.cpp" />
     <ClCompile Include="Scripts\NotificationManager.cpp" />
     <ClCompile Include="Scripts\PedModelManager.cpp" />
     <ClCompile Include="Scripts\PedScripts.cpp">
@@ -414,6 +417,9 @@
     <ClInclude Include="Scripts\Extras\World.h" />
     <ClInclude Include="Scripts\IScriptBuilder.h" />
     <ClInclude Include="Scripts\MiscScripts.h" />
+    <ClInclude Include="Scripts\Misc\IdGun.h" />
+    <ClInclude Include="Scripts\Misc\MiscExtraFeatures.h" />
+    <ClInclude Include="Scripts\Misc\MiscMusicScripts.h" />
     <ClInclude Include="Scripts\NotificationManager.h" />
     <ClInclude Include="Scripts\PedModelManager.h" />
     <ClInclude Include="Scripts\PedScripts.h" />
