Update natives.md * Add quite a bit more natives to my list for a reference. * Add extras folder to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 # Built asis from my tests
 builds/
 
+# Extra files generated from natives.md and Markdown PDF VSCode extension.
+extras/
+
 # Downloaded vehicle images
 python/vehicle_images
 
