Add all vehicles to vehicle spawner * Add FileUtil for loading data from the vehicle files, also has weapon file loading support for when i move it into there.
* Add vehicles json file to Constants.hpp.
* Update main menu with list of vehicles.

* Fix player teleport to fade in FileFunctions.
* Update fade functions to work without an extra wait.
* Add load scene native to teleport functions.
* Change a float to an int in PedScripts, had a flag set to float.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -311,6 +311,7 @@
     <ClCompile Include="Teleports\TeleportLocations.cpp" />
     <ClCompile Include="Teleports\TeleportManager.cpp" />
     <ClCompile Include="Util\FileFunctions.cpp" />
+    <ClCompile Include="Util\FileUtil.cpp" />
     <ClCompile Include="Util\GTAmath.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
@@ -441,6 +442,7 @@
     <ClInclude Include="Util\EntityIterator.h" />
     <ClInclude Include="Util\Enums.h" />
     <ClInclude Include="Util\FileFunctions.h" />
+    <ClInclude Include="Util\FileUtil.h" />
     <ClInclude Include="Util\GTAmath.h" />
     <ClInclude Include="Util\Hash.h" />
     <ClInclude Include="Util\Logger.hpp" />
