--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClCompile Include="Scripts\Misc\MiscMusicScripts.cpp">
       <Filter>Scripts\Misc</Filter>
     </ClCompile>
+    <ClCompile Include="Util\FileUtil.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -664,6 +667,9 @@
     </ClInclude>
     <ClInclude Include="Scripts\Misc\MiscExtraFeatures.h">
       <Filter>Scripts\Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\FileUtil.h">
+      <Filter>Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
